2016-04-11  Brent Fulgham  <bfulgham@apple.com>

        Use WeakPtrs to avoid using deallocated Widgets and ScrollableAreas
        https://bugs.webkit.org/show_bug.cgi?id=156420
        <rdar://problem/25637378>

        Reviewed by Darin Adler.

        * fast/events/wheel-event-destroys-overflow-expected.txt: Added.
        * fast/events/wheel-event-destroys-overflow.html: Added.
        * platform/ios-simulator/TestExpectations: Skip wheel-event test on iOS.

2016-04-11  Dean Jackson  <dino@apple.com>

        putImageData needs to premultiply input
        https://bugs.webkit.org/show_bug.cgi?id=156488
        <rdar://problem/25672675>

        Reviewed by Zalan Bujtas.

        Tests that putImageData is taking unmultiplied data,
        premultiplying it, then copying into the backing store.

        * fast/canvas/putImageData-unmultiplied-expected.html: Added.
        * fast/canvas/putImageData-unmultiplied.html: Added.

2016-04-11  Jiewen Tan  <jiewen_tan@apple.com>

        Unskip imported/w3c/web-platform-tests/IndexedDB/idbindex-multientry-big.htm
        https://bugs.webkit.org/show_bug.cgi?id=156480

        Unreviewed test gardening.

        * platform/ios-simulator/TestExpectations:

2016-04-11  Jiewen Tan  <jiewen_tan@apple.com>

        Skip imported/w3c/web-platform-tests/IndexedDB/idbindex-multientry-big.htm on ios-simulators
        https://bugs.webkit.org/show_bug.cgi?id=156480

        Unreviewed test gardening.

        * platform/ios-simulator/TestExpectations:

2016-04-11  Jiewen Tan  <jiewen_tan@apple.com>

        fast/loader/opaque-base-url.html crashing during mac and ios debug tests
        https://bugs.webkit.org/show_bug.cgi?id=156179
        <rdar://problem/25507719>

        Reviewed by Ryosuke Niwa.

        * fast/loader/iframe-src-invalid-url-expected.txt: Added.
        * fast/loader/iframe-src-invalid-url.html: Added.

2016-04-11  Said Abou-Hallawa  <sabouhallawa@apple,com>
